--- a/Practice/index.html
+++ b/Practice/index.html
@@ -7,15 +7,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <div class="rec-ver"></div>
-    <div class="rec-hor"></div>
-    <div class="square"></div>
-    <div class="circle"></div>
-    <div class="oval-ver"></div>
-    <div class="oval-hor"></div>
-    <div class="line-ver"></div>
-    <div class="line-hor"></div>
-  </div>
+  <div class="desktop">DESKTOP</div>
+  <div class="tablet">TABLET</div>
+  <div class="mobile">MOBILE DEVICE</div>
 </body>
 </html>
